@@ -8,17 +8,17 @@
 bool HDD_GetFileSizeAndInode(char *Directory, char *FileName, dword *CInode, __off64_t *FileSize)
 {
   char                  AbsFileName[256];
-  char                  AbsFileNameUTF8[256];
+  //char                  AbsFileNameUTF8[256];
   tstat64               statbuf;
   int                   status;
 
   TAP_SPrint(AbsFileName, "%s%s/%s", TAPFSROOT, Directory, FileName);
 
-  if(TAP_GetVersion() >= 0x0108)
-  {
-    StrToUTF8(AbsFileName, AbsFileNameUTF8);
-    strcpy(AbsFileName, AbsFileNameUTF8);
-  }
+  //if(TAP_GetVersion() >= 0x0108)
+  //{
+  //  StrToUTF8(AbsFileName, AbsFileNameUTF8);
+  //  strcpy(AbsFileName, AbsFileNameUTF8);
+  //}
 
   if((status = lstat64(AbsFileName, &statbuf))) return FALSE;
 
