@@ -14,7 +14,7 @@ bool HDD_Move(char *FileName, char *FromDir, char *ToDir)
   char                  OldInfName[TS_FILE_NAME_SIZE], NewInfName[TS_FILE_NAME_SIZE];
   bool                  isRec, isDel;
   int                   fNumber;
-  char                  cmdUTF8[256];
+  //char                  cmdUTF8[256];
 
   HDD_TAP_PushDir();
   if(HDD_ChangeDir(FromDir) == FALSE)
@@ -34,11 +34,11 @@ bool HDD_Move(char *FileName, char *FromDir, char *ToDir)
     //Build the unix mv command
     TAP_SPrint(cmd, "mv \"%s%s%s%s%s\" ", TAPFSROOT, (FromDir[0] != '/') ? "/" : "", FromDir, (FromDir[strlen(FromDir) - 1] != '/') ? "/" : "", FileName);
     TAP_SPrint(&cmd[strlen(cmd)], "\"%s%s%s%s%s\"", TAPFSROOT, (ToDir[0] != '/') ? "/" : "", ToDir, (ToDir[strlen(ToDir) - 1] != '/') ? "/" : "", NewFileName);
-    if(TAP_GetVersion() >= 0x0108)
-    {
-      StrToUTF8(cmd, cmdUTF8);
-      strcpy(cmd, cmdUTF8);
-    }
+    //if(TAP_GetVersion() >= 0x0108)
+    //{
+    //  StrToUTF8(cmd, cmdUTF8);
+    //  strcpy(cmd, cmdUTF8);
+    //}
     system(cmd);
 
     SeparateFileNameComponents(FileName, Name, Ext, &fNumber, &isRec, &isDel);
@@ -58,11 +58,11 @@ bool HDD_Move(char *FileName, char *FromDir, char *ToDir)
       //Build the unix mv command
       TAP_SPrint(cmd, "mv \"%s%s%s%s%s\" ", TAPFSROOT, (FromDir[0] != '/') ? "/" : "", FromDir, (FromDir[strlen(FromDir) - 1] != '/') ? "/" : "", OldInfName);
       TAP_SPrint(&cmd[strlen(cmd)], "\"%s%s%s%s%s\"", TAPFSROOT, (ToDir[0] != '/') ? "/" : "", ToDir, (ToDir[strlen(ToDir) - 1] != '/') ? "/" : "", NewInfName);
-      if(TAP_GetVersion() >= 0x0108)
-      {
-        StrToUTF8(cmd, cmdUTF8);
-        strcpy(cmd, cmdUTF8);
-      }
+      //if(TAP_GetVersion() >= 0x0108)
+      //{
+      //  StrToUTF8(cmd, cmdUTF8);
+      //  strcpy(cmd, cmdUTF8);
+      //}
       system(cmd);
 
       SeparateFileNameComponents(FileName, Name, Ext, &fNumber, &isRec, &isDel);
@@ -80,11 +80,11 @@ bool HDD_Move(char *FileName, char *FromDir, char *ToDir)
       //Build the unix mv command
       TAP_SPrint(cmd, "mv \"%s%s%s%s%s\" ", TAPFSROOT, (FromDir[0] != '/') ? "/" : "", FromDir, (FromDir[strlen(FromDir) - 1] != '/') ? "/" : "", OldInfName);
       TAP_SPrint(&cmd[strlen(cmd)], "\"%s%s%s%s%s\"", TAPFSROOT, (ToDir[0] != '/') ? "/" : "", ToDir, (ToDir[strlen(ToDir) - 1] != '/') ? "/" : "", NewInfName);
-      if(TAP_GetVersion() >= 0x0108)
-      {
-        StrToUTF8(cmd, cmdUTF8);
-        strcpy(cmd, cmdUTF8);
-      }
+      //if(TAP_GetVersion() >= 0x0108)
+      //{
+      //  StrToUTF8(cmd, cmdUTF8);
+      //  strcpy(cmd, cmdUTF8);
+      //}
       system(cmd);
     }
   }
