@@ -500,4 +500,8 @@ License:  This library is freeware. You may use this code in your own projects f
 2010-07-13  Added: a fix for TAP_Hdd_ChangeDir(), which fails to change into directories with German Umlaute. HDD_ChangeDir()
               retries a TAP_Hdd_ChangeDir() with the UTF-8 version of the directory name, if the original name fails.
               All FBLib functions now use HDD_ChangeDir().
-
+2010-07-14  Fixed: Some bugs with the UTF8 to ISO conversion
+            Removed: utf8 support has been removed by Korea. Removed all utf8 conversion from the following functions:
+              HDD_RemoveDir(), HDD_Move(), HDD_GetInodeByAbsFileName(), HDD_GetInodeByTypeFile(), HDD_GetInodeByRelFileName(),
+              HDD_GetFileTimeByAbsFileName(), HDD_GetFileTimeByRelFileName(), HDD_GetFileTimeByTypeFile(), HDD_GetFileSizeAndInode(),
+              HDD_GetAbsolutePathByTypeFile(), HDD_TAP_GetIDByIndex(), HDD_GetFileTimeByTypeFile(), HDD_GetInodeByTypeFile()
